# deskforge

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  setup.ps1  setup.sh  tauri.conf.json  vite.config.ts
.github/workflows/: ci.yml
agent-backend/: requirements.txt  run.py
agent-backend/app/: graph.py  main.py  memory.py  models.py  tools.py
docs/: api.md  architecture.md  development.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
