[package]
name = "deskforge"
version = "0.1.0"
description = "AI Desktop Agent"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-shell = "2.3.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
